fix side scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -148,14 +148,10 @@ button{
     transform: scale(1.1);
 }
 
-.install .download h6{
-    font-size: 12px;
-    color: #6d6d6d;
-    padding-left: 10px;
-}
-
-.install .download h6:hover{
+.playlist .create h6{
     color: white;
+    font-size: 12px;
+    margin-left: 10px;
 }
 
 .playlist-name{
@@ -172,7 +168,6 @@ button{
     font-size: 10px;
 }
 
-
 .playlist-name ul li a{
     color: rgba(153, 153, 153, .7);
     text-decoration: none;
@@ -182,6 +177,16 @@ button{
     color: white;
     padding-left: 5px;
     border-left: solid 4px #81b71a;
+}
+
+.install .download h6{
+    font-size: 12px;
+    color: #6d6d6d;
+    padding-left: 10px;
+}
+
+.install .download h6:hover{
+    color: white;
 }
 
 .install{
